--- a/style.css
+++ b/style.css
@@ -8,8 +8,16 @@ flex:1;
 a{
 
     text-decoration: none;
-    color: black;
-    font-size: 18px;
+    color: rgb(250, 250, 250);
+    font-size: 16px;
+}
+
+
+a.class2{
+    text-decoration: none;
+    color: rgb(5, 5, 5);
+    font-size: 10px;
+
 }
 
 .header-container {
@@ -21,9 +29,11 @@ flex: 1;
 font-size: 24px;
 justify-content: space-between;
 align-items: center;
-background-color: rgb(223, 223, 223);
+background-color: rgb(71, 69, 85);
 text-decoration: none;
-padding:30px
+padding:30px;
+color: white;
+
 
 
 
@@ -38,3 +48,95 @@ ul li{
     text-decoration: none;
     
 }
+
+
+.images{
+
+
+
+display: flex;
+flex-direction: row;
+padding: 30px;
+justify-content: space-between;
+align-items: center;
+background-color: rgb(71, 69, 85);
+color: white;
+
+
+}
+
+button{
+
+color: rgb(0, 0, 0);  
+padding: 10px;
+
+
+}
+
+.ProjectsContainer {
+
+
+
+ 
+
+
+
+
+background-color: rgb(230, 230, 230);
+
+
+}
+.projecttext {
+    flex-direction: row;
+text-align: center;
+
+padding:50px;
+flex-wrap: wrap;
+
+
+
+
+
+   
+}
+
+.cardcontainer{
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1;
+    font-size: 24px;
+  justify-content:center;
+    
+  background-color: rgb(230, 230, 230);
+
+
+}
+.card {
+
+    flex-direction: row;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 1px;
+    padding: 5px;
+    margin: 10px;
+    width: fit-content;
+    text-align: center;
+    font-size: 10px;
+
+
+  }
+
+  .footer{
+    background-color: rgb(71, 69, 85);
+  flex-direction: row;
+display: flex;
+  padding:30px;
+  justify-content: space-between;
+color: white;
+  
+
+  }
+
+
+  
